<resources>
    <string name="app_name">AndroidSprint</string>
    <string name="title_categories">категории</string>
    <string name="title_favorites">избранное</string>
    <string name="burger">burger</string>
    <string name="title_burgers_category_text">бургеры</string>
    <string name="description_burgers_category_text">Рецепты всех популярных видов бургеров</string>
    <string name="screen_burger_categories">категории</string>
    <string name="recipes_list">Список рецептов</string>
    <string name="image_category_description">Изображение категории</string>
    <string name="title_recipe">Рецепт</string>
    <string name="title_ingredients">ингредиенты</string>
    <string name="title_method">способ приготовления</string>
    <string name="title_portions">Порции:</string>
    <string name="default_portions_count">1</string>
    <string name="text_empty_favorites">Вы ещё не добавили ни одного рецепта в избранное</string>
</resources>