<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginHorizontal="@dimen/main_padding_half"
    android:layout_marginBottom="@dimen/main_padding"
    android:background="@drawable/shape_header_rounded_corners"
    android:backgroundTint="@color/text_btn_color"
    android:clickable="true"
    app:cardCornerRadius="@dimen/main_padding_half">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/shape_header_rounded_corners"
            android:contentDescription="@string/burger"
            android:scaleType="centerCrop"
            android:src="@drawable/burger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/StyleTitleCategories14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_padding_half"
            android:layout_marginTop="@dimen/main_padding_half"
            android:layout_marginEnd="75dp"
            android:text="@string/title_burgers_category_text" />

        <TextView
            android:id="@+id/textView2"
            style="@style/StyleDescriptionCategories12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_padding_half"
            android:layout_marginTop="@dimen/main_padding_half"
            android:layout_marginEnd="@dimen/main_padding_half"
            android:layout_marginBottom="@dimen/main_padding_half"
            android:text="@string/description_burgers_category_text" />
    </LinearLayout>

</androidx.cardview.widget.CardView>